# my_blog_plantform

./: .gitignore  API_Documentation.md  README.md  package.json  pyproject.toml  test_new_user.py
back_end/: .env.example  STAGE8_IMPLEMENTATION.md  openapi_schema.yaml
back_end/apps/articles/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
back_end/apps/comments/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
back_end/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
back_end/config/: asgi.py  settings.py  urls.py  wsgi.py
back_end/utils/: email.py  middleware.py  permission_manager.py  permissions.py  search.py  text_filter.py
document/: API_Documentation.md  Database_Design.md
front _end/: package.json
front _end/app/: layout.tsx
front _end/app/drafts/: page.tsx
front _end/app/login/: page.tsx
front _end/app/register/: page.tsx
front _end/app/test-api/: page.tsx
front _end/components/articles/: article-actions.tsx  article-form.tsx
front _end/components/auth/: protected-route-client.tsx
front _end/components/layout/: navbar.tsx
front_end/: package.json
front_end/app/: page.tsx
front_end/app/create-article/: page.tsx
front_end/app/drafts/: page.tsx
front_end/app/profile/: page.tsx
front_end/app/register/: page.tsx
front_end/app/search/: page.tsx
front_end/app/stats/: page.tsx
front_end/contexts/: auth-context.tsx
front_end/hooks/: use-auth.ts
front_end/lib/: api.ts  article-cache.ts  types.ts
(+49 files in other folders)
