[project]
name = "my-blog-plantform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "drf-nested-routers>=0.93.4",
    "django-guardian>=3.0.0",
    "django-redis>=6.0.0",
    "pymysql>=1.1.1",
    "cryptography>=45.0.4",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

